--- a/Students Intervention/student_intervention.ipynb
+++ b/Students Intervention/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +116,7 @@
     "n_failed = n_students-n_passed\n",
     "#n_failed = len(student_data[student_data['passed']=='no'])\n",
     "# # TODO: Calculate graduation rate\n",
-    "grad_rate = (n_passed/n_students)*100\n",
+    "grad_rate = (float(n_passed)/float(n_students))*100\n",
     "\n",
     "# Print the results\n",
     "print (\"Total number of students: {}\".format(n_students))\n",
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -290,6 +290,7 @@
    "source": [
     "# TODO: Import any additional functionality you may need here\n",
     "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.cross_validation import StratifiedShuffleSplit\n",
     "# TODO: Set the number of training points\n",
     "num_train = 300\n",
     "\n",
@@ -302,6 +303,13 @@
     "# Show the results of the split\n",
     "print (\"Training set has {} samples.\".format(X_train.shape[0]))\n",
     "print (\"Testing set has {} samples.\".format(X_test.shape[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The unbanlance data set maybe common in real world,but what can we do anything for handling this situation? "
    ]
   },
   {
@@ -341,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -404,11 +412,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.6552.\n",
+      "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0040 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7500.\n",
+      "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
+      "Trained model in 0.0040 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.6613.\n",
+      "Training a GaussianNB using a training set size of 100. . .\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 0.8467.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.8029.\n",
+      "Training a GaussianNB using a training set size of 200. . .\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0005 seconds.\n",
+      "F1 score for training set: 0.8406.\n",
+      "Made predictions in 0.0005 seconds.\n",
+      "F1 score for test set: 0.7244.\n",
+      "Training a GaussianNB using a training set size of 300. . .\n",
+      "Trained model in 0.0015 seconds\n",
+      "Made predictions in 0.0005 seconds.\n",
+      "F1 score for training set: 0.8038.\n",
+      "Made predictions in 0.0005 seconds.\n",
+      "F1 score for test set: 0.7634.\n",
+      "Training a SVC using a training set size of 100. . .\n",
+      "Trained model in 0.0020 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 0.8777.\n",
+      "Made predictions in 0.0005 seconds.\n",
+      "F1 score for test set: 0.7746.\n",
+      "Training a SVC using a training set size of 200. . .\n",
+      "Trained model in 0.0046 seconds\n",
+      "Made predictions in 0.0030 seconds.\n",
+      "F1 score for training set: 0.8679.\n",
+      "Made predictions in 0.0020 seconds.\n",
+      "F1 score for test set: 0.7815.\n",
+      "Training a SVC using a training set size of 300. . .\n",
+      "Trained model in 0.0100 seconds\n",
+      "Made predictions in 0.0080 seconds.\n",
+      "F1 score for training set: 0.8761.\n",
+      "Made predictions in 0.0030 seconds.\n",
+      "F1 score for test set: 0.7838.\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Import the three supervised learning models from sklearn\n",
     "# from sklearn import model_A\n",
@@ -418,28 +487,30 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.svm import SVC\n",
     "# TODO: Initialize the three models\n",
-    "clf_A = DecisionTreeClassifier()\n",
+    "clf_A = DecisionTreeClassifier(random_state = 42)\n",
     "clf_B = GaussianNB()\n",
     "clf_C = SVC()\n",
     "\n",
     "# TODO: Set up the training set sizes\n",
-    "X_train_100, X_test_200, y_train_100, y_test_200 = train_test_split(X_train, y_train, test_size = 0.665, random_state = 42)\n",
+    "X_train_100 = X_train[0:100]\n",
+    "y_train_100 = y_train[0:100]\n",
     "\n",
-    "X_train_200, X_test_100, y_train_200, y_test_100 = train_test_split(X_train, y_train, test_size = 0.331, random_state = 42)\n",
+    "X_train_200 = X_train[0:200]\n",
+    "y_train_200 = y_train[0:200]\n",
     "\n",
-    "X_train_300 = X_train\n",
-    "y_train_300 = y_train\n",
+    "X_train_300 = X_train[:]\n",
+    "y_train_300 = y_train[:]\n",
     "\n",
     "# TODO: Execute the 'train_predict' function for each classifier and each training set size\n",
-    "# train_predict(clf_A, X_train_100, y_train_100, X_test, y_test)\n",
-    "# train_predict(clf_A, X_train_200, y_train_200, X_test, y_test)\n",
-    "# train_predict(clf_A, X_train_300, y_train_300, X_test, y_test)\n",
-    "# train_predict(clf_B, X_train_100, y_train_100, X_test, y_test)\n",
-    "# train_predict(clf_B, X_train_200, y_train_200, X_test, y_test)\n",
-    "# train_predict(clf_B, X_train_300, y_train_300, X_test, y_test)\n",
-    "# train_predict(clf_C, X_train_100, y_train_100, X_test, y_test)\n",
-    "# train_predict(clf_C, X_train_200, y_train_200, X_test, y_test)\n",
-    "# train_predict(clf_C, X_train_300, y_train_300, X_test, y_test)"
+    "train_predict(clf_A, X_train_100, y_train_100, X_test, y_test)\n",
+    "train_predict(clf_A, X_train_200, y_train_200, X_test, y_test)\n",
+    "train_predict(clf_A, X_train_300, y_train_300, X_test, y_test)\n",
+    "train_predict(clf_B, X_train_100, y_train_100, X_test, y_test)\n",
+    "train_predict(clf_B, X_train_200, y_train_200, X_test, y_test)\n",
+    "train_predict(clf_B, X_train_300, y_train_300, X_test, y_test)\n",
+    "train_predict(clf_C, X_train_100, y_train_100, X_test, y_test)\n",
+    "train_predict(clf_C, X_train_200, y_train_200, X_test, y_test)\n",
+    "train_predict(clf_C, X_train_300, y_train_300, X_test, y_test)"
    ]
   },
   {
@@ -458,25 +529,25 @@
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |     0.0020               |  0.00                       |        1.0        |    0.7634               |\n",
-    "| 200               |        0.0030          |   0.00                    |              1.0     |      0.7273           |\n",
-    "| 300               |         0.0060                |0.001                       |        1.0          |   0.6500      |\n",
+    "| 100               |     0.0020               |  0.0010                       |        1.0        |    0.6552               |\n",
+    "| 200               |        0.0040          |   0.0010                    |              1.0     |      0.7500           |\n",
+    "| 300               |         0.0040                |0.0000                       |        1.0          |   0.6613      |\n",
     "\n",
     "** Classifer 2 - Naive Bayes \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               | 0.0020                        |  0.0010                      | 0.3256                 |   0.4048              |\n",
-    "| 200               |   0.0020             |              0.0010          |        0.8286          |     0.7538            |\n",
-    "| 300               |    0.0030                     |       0.0010                 |     0.8038             |    0.7634     |\n",
+    "| 100               | 0.0020                        |  0.0010                      | 0.8467                |   0.8029              |\n",
+    "| 200               |   0.0010             |              0.0005          |        0.8406          |     0.7244            |\n",
+    "| 300               |    0.0015                     |       0.0005                 |     0.8038             |    0.7634     |\n",
     "\n",
     "** Classifer 3 - Support Vector Machine \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |  0.0035                       | 0.0015                       |  0.9045                |  0.7682               |\n",
-    "| 200               |   0.0060                      |    0.0030                    |      0.8903            |    0.7903             |\n",
-    "| 300               |    0.0120                     |     0.0070                   | 0.8761                 |     0.7838            |"
+    "| 100               |  0.0020                       | 0.0010                       |  0.8777                |  0.7746               |\n",
+    "| 200               |   0.0046                      |    0.0020                    |      0.8679            |    0.7815             |\n",
+    "| 300               |    0.0100                     |     0.0030                   | 0.8761                 |     0.7838            |"
    ]
   },
   {
@@ -499,7 +570,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** From three tables above, we can know that  DT has a lowest training predition time, SVM has a longest training and prediction time, a best performance compraed with others as same conditon. But, we should notice that ST and SVM's test F1 score decrease with the increase of train dataset, Naive Bayes's score increases and the cost time of Naive Bayes is middle compared others. So I would choose Naive Bayes as the best model."
+    "**Answer: ** From three tables above,DT has a best performance on F1 score for training score, SVM has a best performance on F1 score for test score, Naive Bayes has a best performance on time cost. And DT mayby capture all of different situations on training set, but the higher error of training score and test score means overfitting of DT. Compared with others, DT's theory is simple enough to understand, in this problem, I would reselect DT as the Best Model for the highest F1 score of train set and the middle time cost."
    ]
   },
   {
@@ -514,7 +585,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** Naive Bayes is my choice as a best predition model. Its principle is that every feature of data has a independent influence on classify result, so we can calculate the probality of different result on differen condition of feature, the max probability of result can be a classification. "
+    "**Answer: **  Decision Tree is my choice as the best model. It's principle can be explained like below. if we have a date set which has six features as (A,B,C,D,E,F,G). If DT is used here, we can make a judgment.  the flow of judgement is just like a tree. \n",
+    "    if A:\n",
+    "       if B:\n",
+    "         if C:\n",
+    "           if D:\n",
+    "              if E:\n",
+    "                 if F:\n",
+    "                    if G:\n",
+    "                        result.\n",
+    "The root of tree included all features, every node has one feature, and get a result through judging the node. But something we should notice, if data set has amounts of features, whether every feature is useful for prediction and when DT should stop. The shortcoming is easy to overfit."
    ]
   },
   {
@@ -535,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -544,14 +624,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0010 seconds.\n",
-      "Tuned model has a training F1 score of 0.7954.\n",
       "Made predictions in 0.0000 seconds.\n",
-      "Tuned model has a testing F1 score of 0.7941.\n",
-      "Made predictions in 0.0060 seconds.\n",
-      "Tuned model has a training F1 score of 0.8323.\n",
-      "Made predictions in 0.0020 seconds.\n",
-      "Tuned model has a testing F1 score of 0.7945.\n"
+      "Tuned model has a training F1 score of 0.8119.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "Tuned model has a testing F1 score of 0.7742.\n"
      ]
     }
    ],
@@ -560,38 +636,31 @@
     "from  sklearn.grid_search import GridSearchCV\n",
     "from sklearn.metrics import make_scorer\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "# TODO: Create the parameters list you wish to tune\n",
-    "parameters_bayes = {'alpha':[0.1], 'fit_prior': ['True']}\n",
-    "# parameters_svm = [\n",
-    "# #   {'C': [1, 10, 100, 1000], 'kernel': ['linear']},\n",
-    "#   {'C': [1, 10, 100, 1000], 'gamma': [0.001, 0.0001], 'kernel': ['rbf']},\n",
-    "#  ]\n",
+    "parameters = { 'criterion':['gini', 'entropy'], 'max_features':['auto','log2','sqrt'], 'max_depth':[3,4], 'min_samples_split':[2,6,7]\n",
+    "                ,'max_leaf_nodes':[2,3],'min_samples_split':[2,3,4], 'min_samples_leaf':[1, 2, 3],\n",
+    "             }\n",
     "\n",
-    "parameters_svm = {'C':[1,10, 100, 1000], 'gamma':[0.001, 0.0001], 'kernel':('linear', 'rbf')}\n",
     "# TODO: Initialize the classifier\n",
-    "clf_bayes = MultinomialNB()\n",
-    "clf_svm = SVC()\n",
+    "clf = DecisionTreeClassifier(random_state = 42 )\n",
     "\n",
     "# TODO: Make an f1 scoring function using 'make_scorer' \n",
     "f1_scorer = make_scorer(f1_score, pos_label = 'yes')\n",
     "\n",
     "# TODO: Perform grid search on the classifier using the f1_scorer as the scoring method\n",
-    "grid_obj_bayes = GridSearchCV(clf_bayes, parameters_bayes, scoring = f1_scorer)\n",
-    "grid_obj_svm = GridSearchCV(clf_svm, parameters_svm, scoring = f1_scorer)\n",
+    "grid_obj = GridSearchCV(clf, parameters, scoring = f1_scorer)\n",
+    "\n",
     "\n",
     "# TODO: Fit the grid search object to the training data and find the optimal parameters\n",
-    "grid_obj_bayes = grid_obj_bayes.fit(X_train, y_train)\n",
-    "grid_obj_svm = grid_obj_svm.fit(X_train, y_train)\n",
+    "grid_obj = grid_obj.fit(X_train, y_train)\n",
     "\n",
     "# # Get the estimator\n",
-    "clf_bayes = grid_obj_bayes.best_estimator_\n",
-    "clf_svm = grid_obj_svm.best_estimator_\n",
+    "clf = grid_obj.best_estimator_\n",
     "\n",
     "# Report the final F1 score for training and testing after parameter tuning\n",
-    "print (\"Tuned model has a training F1 score of {:.4f}.\".format(predict_labels(clf_bayes, X_train, y_train)))\n",
-    "print (\"Tuned model has a testing F1 score of {:.4f}.\".format(predict_labels(clf_bayes, X_test, y_test)))\n",
-    "print (\"Tuned model has a training F1 score of {:.4f}.\".format(predict_labels(clf_svm, X_train, y_train)))\n",
-    "print (\"Tuned model has a testing F1 score of {:.4f}.\".format(predict_labels(clf_svm, X_test, y_test)))"
+    "print (\"Tuned model has a training F1 score of {:.4f}.\".format(predict_labels(clf, X_train, y_train)))\n",
+    "print (\"Tuned model has a testing F1 score of {:.4f}.\".format(predict_labels(clf, X_test, y_test)))"
    ]
   },
   {
@@ -606,7 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** The F1 score for training ant test are 0.7941 and 0.7945. Accuracy is higher than untuned model.But in tunninig model, I used MultinomialNB to tune for GaunssNB does not nedd parameters to adapt. and I used the SVM to compared with this, their F1 score are am"
+    "**Answer: ** The F1 score for training ant test are 0.8119 and 0.7742. Compare to the untuned DT model, F1 score of test increase, F1 score of train decrease obviously,and the error of train and test also decreased. Compared others, error between is smilar to Naive Bayes,and lower than SVM. F1 score only is higher than Naive Bayes,and obvious lower than SVM. Dose this situation means that SVM tunned will have a good perfomance than DT. F1 score is a overall measurement of precision and recall, it consider both precison and recall to avoid extreme situation , higher F1 score means precision and recall ar both high.And F1 score is also suitable to use for this unbanlance data set."
    ]
   },
   {
