--- a/Students Intervention/student_intervention.ipynb
+++ b/Students Intervention/student_intervention.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -297,10 +297,14 @@
     "# Set the number of testing points\n",
     "num_test = X_all.shape[0] - num_train\n",
     "\n",
-    "# TODO: Shuffle and split the dataset into the number of training and testing points above\n",
-    "X_train ,X_test ,y_train , y_test = train_test_split(X_all, y_all, test_size = 0.24, random_state = 42)\n",
+    "skf = StratifiedShuffleSplit(y_all,  test_size = 0.24, random_state = 42)\n",
     "\n",
-    "# Show the results of the split\n",
+    "# # TODO: Shuffle and split the dataset into the number of training and testing points above\n",
+    "for train_index, test_index in skf:\n",
+    "    X_train, X_test = X_all.iloc[train_index], X_all.iloc[test_index]\n",
+    "    y_train, y_test = y_all[train_index], y_all[test_index]\n",
+    "\n",
+    "# # Show the results of the split\n",
     "print (\"Training set has {} samples.\".format(X_train.shape[0]))\n",
     "print (\"Testing set has {} samples.\".format(X_test.shape[0]))"
    ]
@@ -349,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -412,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -421,60 +425,69 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
+      "DecisionTreeClassifier: \n",
+      "\n",
       "Training a DecisionTreeClassifier using a training set size of 100. . .\n",
       "Trained model in 0.0020 seconds\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.6552.\n",
-      "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
-      "Trained model in 0.0040 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
       "F1 score for training set: 1.0000.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.7500.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.5913.\n",
+      "Training a DecisionTreeClassifier using a training set size of 200. . .\n",
+      "Trained model in 0.0030 seconds\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for training set: 1.0000.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.7302.\n",
       "Training a DecisionTreeClassifier using a training set size of 300. . .\n",
       "Trained model in 0.0040 seconds\n",
       "Made predictions in 0.0010 seconds.\n",
       "F1 score for training set: 1.0000.\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for test set: 0.6613.\n",
+      "F1 score for test set: 0.7385.\n",
+      "\n",
+      "GaussianNB: \n",
+      "\n",
       "Training a GaussianNB using a training set size of 100. . .\n",
-      "Trained model in 0.0020 seconds\n",
+      "Trained model in 0.0010 seconds\n",
       "Made predictions in 0.0000 seconds.\n",
-      "F1 score for training set: 0.8467.\n",
-      "Made predictions in 0.0010 seconds.\n",
-      "F1 score for test set: 0.8029.\n",
+      "F1 score for training set: 0.6316.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.4516.\n",
       "Training a GaussianNB using a training set size of 200. . .\n",
       "Trained model in 0.0010 seconds\n",
-      "Made predictions in 0.0005 seconds.\n",
-      "F1 score for training set: 0.8406.\n",
-      "Made predictions in 0.0005 seconds.\n",
-      "F1 score for test set: 0.7244.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 0.7907.\n",
+      "Made predictions in 0.0000 seconds.\n",
+      "F1 score for test set: 0.7218.\n",
       "Training a GaussianNB using a training set size of 300. . .\n",
-      "Trained model in 0.0015 seconds\n",
-      "Made predictions in 0.0005 seconds.\n",
-      "F1 score for training set: 0.8038.\n",
-      "Made predictions in 0.0005 seconds.\n",
-      "F1 score for test set: 0.7634.\n",
+      "Trained model in 0.0010 seconds\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for training set: 0.7828.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.7273.\n",
+      "\n",
+      "SVC: \n",
+      "\n",
       "Training a SVC using a training set size of 100. . .\n",
       "Trained model in 0.0020 seconds\n",
       "Made predictions in 0.0010 seconds.\n",
-      "F1 score for training set: 0.8777.\n",
-      "Made predictions in 0.0005 seconds.\n",
-      "F1 score for test set: 0.7746.\n",
+      "F1 score for training set: 0.8811.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "F1 score for test set: 0.8158.\n",
       "Training a SVC using a training set size of 200. . .\n",
-      "Trained model in 0.0046 seconds\n",
+      "Trained model in 0.0050 seconds\n",
       "Made predictions in 0.0030 seconds.\n",
-      "F1 score for training set: 0.8679.\n",
-      "Made predictions in 0.0020 seconds.\n",
-      "F1 score for test set: 0.7815.\n",
+      "F1 score for training set: 0.8750.\n",
+      "Made predictions in 0.0015 seconds.\n",
+      "F1 score for test set: 0.8235.\n",
       "Training a SVC using a training set size of 300. . .\n",
       "Trained model in 0.0100 seconds\n",
-      "Made predictions in 0.0080 seconds.\n",
-      "F1 score for training set: 0.8761.\n",
-      "Made predictions in 0.0030 seconds.\n",
-      "F1 score for test set: 0.7838.\n"
+      "Made predictions in 0.0130 seconds.\n",
+      "F1 score for training set: 0.8786.\n",
+      "Made predictions in 0.0040 seconds.\n",
+      "F1 score for test set: 0.7919.\n"
      ]
     }
    ],
@@ -492,25 +505,23 @@
     "clf_C = SVC()\n",
     "\n",
     "# TODO: Set up the training set sizes\n",
-    "X_train_100 = X_train[0:100]\n",
-    "y_train_100 = y_train[0:100]\n",
+    "X_train_100 = (X_train[0:100])\n",
+    "y_train_100 = (y_train[0:100])\n",
     "\n",
-    "X_train_200 = X_train[0:200]\n",
-    "y_train_200 = y_train[0:200]\n",
+    "X_train_200 = (X_train[0:200])\n",
+    "y_train_200 = (y_train[0:200])\n",
     "\n",
-    "X_train_300 = X_train[:]\n",
-    "y_train_300 = y_train[:]\n",
+    "X_train_300 = (X_train[:])\n",
+    "y_train_300 = (y_train[:])\n",
     "\n",
     "# TODO: Execute the 'train_predict' function for each classifier and each training set size\n",
-    "train_predict(clf_A, X_train_100, y_train_100, X_test, y_test)\n",
-    "train_predict(clf_A, X_train_200, y_train_200, X_test, y_test)\n",
-    "train_predict(clf_A, X_train_300, y_train_300, X_test, y_test)\n",
-    "train_predict(clf_B, X_train_100, y_train_100, X_test, y_test)\n",
-    "train_predict(clf_B, X_train_200, y_train_200, X_test, y_test)\n",
-    "train_predict(clf_B, X_train_300, y_train_300, X_test, y_test)\n",
-    "train_predict(clf_C, X_train_100, y_train_100, X_test, y_test)\n",
-    "train_predict(clf_C, X_train_200, y_train_200, X_test, y_test)\n",
-    "train_predict(clf_C, X_train_300, y_train_300, X_test, y_test)"
+    "models = [clf_A, clf_B, clf_C]\n",
+    "\n",
+    "# loop thru models, then thru train sizes\n",
+    "for clf in models:\n",
+    "    print (\"\\n{}: \\n\".format(clf.__class__.__name__))\n",
+    "    for n in [100, 200, 300]:\n",
+    "        train_predict(clf, X_train[:n], y_train[:n], X_test, y_test)"
    ]
   },
   {
@@ -529,25 +540,25 @@
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |     0.0020               |  0.0010                       |        1.0        |    0.6552               |\n",
-    "| 200               |        0.0040          |   0.0010                    |              1.0     |      0.7500           |\n",
-    "| 300               |         0.0040                |0.0000                       |        1.0          |   0.6613      |\n",
+    "| 100               |     0.0020               |  0.0000                       |        1.0        |    0.5913               |\n",
+    "| 200               |        0.0030          |   0.0000                    |              1.0     |      0.7302           |\n",
+    "| 300               |         0.0040                |0.0000                       |        1.0          |   0.7385      |\n",
     "\n",
     "** Classifer 2 - Naive Bayes \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               | 0.0020                        |  0.0010                      | 0.8467                |   0.8029              |\n",
-    "| 200               |   0.0010             |              0.0005          |        0.8406          |     0.7244            |\n",
-    "| 300               |    0.0015                     |       0.0005                 |     0.8038             |    0.7634     |\n",
+    "| 100               | 0.0010                        |  0.0000                      | 0.8316                |   0.4516              |\n",
+    "| 200               |   0.0010             |              0.0000          |        0.7907          |     0.7218            |\n",
+    "| 300               |    0.0010                     |       0.0010                 |     0.7828             |    0.7273     |\n",
     "\n",
     "** Classifer 3 - Support Vector Machine \n",
     "\n",
     "| Training Set Size | Training Time | Prediction Time (test) | F1 Score (train) | F1 Score (test) |\n",
     "| :---------------: | :---------------------: | :--------------------: | :--------------: | :-------------: |\n",
-    "| 100               |  0.0020                       | 0.0010                       |  0.8777                |  0.7746               |\n",
-    "| 200               |   0.0046                      |    0.0020                    |      0.8679            |    0.7815             |\n",
-    "| 300               |    0.0100                     |     0.0030                   | 0.8761                 |     0.7838            |"
+    "| 100               |  0.0020                       | 0.0010                       |  0.8811                |  0.8158               |\n",
+    "| 200               |   0.0050                      |    0.0015                    |      0.8750            |    0.8235             |\n",
+    "| 300               |    0.0100                     |     0.0040                   | 0.8786                 |     0.7919            |"
    ]
   },
   {
@@ -570,7 +581,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: ** From three tables above,DT has a best performance on F1 score for training score, SVM has a best performance on F1 score for test score, Naive Bayes has a best performance on time cost. And DT mayby capture all of different situations on training set, but the higher error of training score and test score means overfitting of DT. Compared with others, DT's theory is simple enough to understand, in this problem, I would reselect DT as the Best Model for the highest F1 score of train set and the middle time cost."
+    "**Answer: **  From three tables above,SVM has a best test F1 score and longest time.DT has a lower time cost and best training F1 score. The F1 score equals one means DT is overfitting, and We can tune model to make F1 score of test and train balanced and higher,but for SVM, F1 score of train is enough high,model tunning is easy to make SVM overfit.So I would conotinue to choose DT as the best Model because that the experiments of model tuning reflect that F1 score of DT and SVM may be similar for train and test,but the time cost of DT is lower than SVM."
    ]
   },
   {
@@ -585,15 +596,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **  Decision Tree is my choice as the best model. It's principle can be explained like below. if we have a date set which has six features as (A,B,C,D,E,F,G). If DT is used here, we can make a judgment.  the flow of judgement is just like a tree. \n",
-    "    if A:\n",
-    "       if B:\n",
-    "         if C:\n",
-    "           if D:\n",
-    "              if E:\n",
-    "                 if F:\n",
-    "                    if G:\n",
-    "                        result.\n",
+    "**Answer: **  Decision Tree is my choice as the best model. It's principle can be explained like below. if we have students data which has six features as (sex,absence,freetime,health,studytime,paid). If DT is used here, we can make a judgment.  the flow of judgement is just like a tree. \n",
+    "    if sex:\n",
+    "       if absence:\n",
+    "         if freetime:\n",
+    "           if health:\n",
+    "              if studytime:\n",
+    "                 if paid:\n",
+    "                      result.\n",
     "The root of tree included all features, every node has one feature, and get a result through judging the node. But something we should notice, if data set has amounts of features, whether every feature is useful for prediction and when DT should stop. The shortcoming is easy to overfit."
    ]
   },
@@ -614,8 +624,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 5 - Final F<sub>1</sub> Score\n",
+    "*What is the final model's F<sub>1</sub> score for training and testing? How does that score compare to the untuned model?*"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -624,10 +642,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Made predictions in 0.0000 seconds.\n",
-      "Tuned model has a training F1 score of 0.8119.\n",
       "Made predictions in 0.0010 seconds.\n",
-      "Tuned model has a testing F1 score of 0.7742.\n"
+      "Tuned model has a training F1 score of 0.8024.\n",
+      "Made predictions in 0.0010 seconds.\n",
+      "Tuned model has a testing F1 score of 0.8050.\n"
      ]
     }
    ],
@@ -635,7 +653,6 @@
     "# TODO: Import 'GridSearchCV' and 'make_scorer'\n",
     "from  sklearn.grid_search import GridSearchCV\n",
     "from sklearn.metrics import make_scorer\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "# TODO: Create the parameters list you wish to tune\n",
     "parameters = { 'criterion':['gini', 'entropy'], 'max_features':['auto','log2','sqrt'], 'max_depth':[3,4], 'min_samples_split':[2,6,7]\n",
@@ -643,14 +660,13 @@
     "             }\n",
     "\n",
     "# TODO: Initialize the classifier\n",
-    "clf = DecisionTreeClassifier(random_state = 42 )\n",
+    "clf = DecisionTreeClassifier(random_state = 42)\n",
     "\n",
     "# TODO: Make an f1 scoring function using 'make_scorer' \n",
     "f1_scorer = make_scorer(f1_score, pos_label = 'yes')\n",
     "\n",
     "# TODO: Perform grid search on the classifier using the f1_scorer as the scoring method\n",
     "grid_obj = GridSearchCV(clf, parameters, scoring = f1_scorer)\n",
-    "\n",
     "\n",
     "# TODO: Fit the grid search object to the training data and find the optimal parameters\n",
     "grid_obj = grid_obj.fit(X_train, y_train)\n",
@@ -667,15 +683,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 5 - Final F<sub>1</sub> Score\n",
-    "*What is the final model's F<sub>1</sub> score for training and testing? How does that score compare to the untuned model?*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Answer: ** The F1 score for training ant test are 0.8119 and 0.7742. Compare to the untuned DT model, F1 score of test increase, F1 score of train decrease obviously,and the error of train and test also decreased. Compared others, error between is smilar to Naive Bayes,and lower than SVM. F1 score only is higher than Naive Bayes,and obvious lower than SVM. Dose this situation means that SVM tunned will have a good perfomance than DT. F1 score is a overall measurement of precision and recall, it consider both precison and recall to avoid extreme situation , higher F1 score means precision and recall ar both high.And F1 score is also suitable to use for this unbanlance data set."
+    "**Answer: ** The F1 score for training ant test are 0.8024 and 0.8050. Compare to the untuned DT model, F1 score of test increase, F1 score of train decrease obviously,and the error of train and test also decreased. Compared others, error between is smilar to Naive Bayes,and lower than SVM. F1 score only is higher than Naive Bayes,and obvious lower than SVM. Dose this situation means that SVM tunned will have a good perfomance than DT. F1 score is a overall measurement of precision and recall, it consider both precison and recall to avoid extreme situation , higher F1 score means precision and recall ar both high.And F1 score is also suitable to use for this unbanlance data set."
    ]
   },
   {
